--- a/makefile.txt
+++ b/makefile.txt
@@ -1,9 +1,16 @@
-CFLAGS = -Wall -std=c99 -O2
-DEPS=main.o heap.o
-PRGM=test
+# the compiler: gcc for C program
+  CC = gcc
+
+# compiler flags:
+#  -g    adds debugging information to the executable file
+#  -Wall turns on most, but not all, compiler warnings
+  CFLAGS  = -g -Wall -std=c99
+
+  DEPS=main.o heap.o
+  PRGM=test
 
 MAIN: $(DEPS)
-	$(CC) $(DEPS) -o $(PRGM)	
+      $(CC) $(DEPS) -o $(PRGM)	
 
 clean:
 rm *.o $(PRGM)
